# Sweep

./: .gitignore  CMakeLists.txt  LICENSE
include/: ast.h  lexer.h  parser.h
src/: ast.c  lexer.c  main.c  parser.c
